# AITerminal

./: Cargo.toml  README.md  tauri.conf.json
frontend/: index.html
src/: ai.rs  main.rs  safety.rs  shell.rs
