[package]
name = "aiterminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
chrono = "0.4"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }
